AI Mechanism Fixes